--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 /*
-Theme Name: Heikin eka teema
+Theme Name: JooaTheme
 Theme URI: 
-Description: Heikin eka WP teema
+Description: WordPress näyttötehtävä theme
 Version: 1.0
-Author: Heikki Jylänki
+Author: Jooa Akonpelto
 
-	Copyright &copy; 2023 Heikki Jylänki
+	Copyright &copy; 2023 Jooa Akonpelto. All rights reserved.
 
 
 */
 
 /* HEADER AND BODY STYLING */
 body {margin:0;padding:0}
-#header {background:#0066ff;width:100%;height:80px}
+#header {background:#0066ff;width:100%;height:100px; border-radius: 0 0 20% 20%;box-shadow: 0px 0px 7px 1px black;margin-bottom: 22px;}
 #header .widthlimiter div {float:right;color:#74caff;font:italic bold 1em/80px sans-serif;}
 #search {display:inline}
 #description {display:inline;margin-right:1em}
@@ -42,9 +42,11 @@ body {margin:0;padding:0}
 #hj_NavId li:hover ul, #hj_NavId li li:hover ul, #hj_NavId li li li:hover ul, #hj_NavId li.sfhover ul, #hj_NavId li li.sfhover ul, #hj_NavId li li li.sfhover ul {left:auto;background:#fff}
 #hj_NavId li:hover, #hj_NavId li.sfhover {box-shadow: 0px 0px 7px 3px rgba(0,0,0,0.1);}
 #hj_NavId li:hover a, #hj_NavId li.sfhover a {color:#202225}
-
+#header h1{
+	text-align: center;
+}
 #searchbox{
-	background-color: #202225; /* Green */
+	background-color: #7d7d7d; /* Green */
 	/*box shadow*/
 	box-shadow: 0px 0px 0px 6px rgba(0,0,0,0.1);
 	border: none;
@@ -61,7 +63,7 @@ body {margin:0;padding:0}
 	box-shadow: 0px 0px 0px 0px rgba(0,0,0,1);
 }
 #btnSearch{
-	background-color: #202225; /* Green */
+	background-color: #7d7d7d; /* Green */
 	/*box shadow*/
 	box-shadow: 0px 0px 0px 6px rgba(0,0,0,0.1);
 	border: none;
@@ -81,8 +83,8 @@ body {margin:0;padding:0}
 
 /* MAIN CONTENT STYLING */
 #content {}
-h1,h2,h3,h4,h5 {color:#ffffff}
-h1 a,h2 a,h3 a,h4 a,h5 a {color:#ffffff;text-decoration:none;  -webkit-text-stroke: 1px rgba(0, 0, 0, 1);}
+h1,h2,h3,h4,h5 {color:#000000}
+h1 a,h2 a,h3 a,h4 a,h5 a {color:#000000;text-decoration:none;}
 h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover,h5 a:hover {text-decoration:underline}
 h1 {margin:0;padding:0;font:normal bold 3em/80px sans-serif}
 h2 {font:normal bold 2em sans-serif;margin:0.5em 0}
@@ -90,16 +92,16 @@ h3 {font:normal bold 1.6em sans-serif;margin:0.4em 0}
 h4 {font:normal bold 1.3em sans-serif;margin:0.3em 0}
 h5 {font:normal bold 1.2em sans-serif;margin:0.2em 0}
 
-p {font:normal 0.8em sans-serif;color:#202225}
+p {font:normal 1.1em sans-serif;color:#202225}
 p a {color:#63A9D5;text-decoration:none}
-p a:hover {text-decoration:underline}
+p a:hover {text-decoration:none}
 
 ul li, ol li {font-family:sans-serif;color:#202225}
 
 /* FOOTER STYLING */
-#footer {background:#202225;width:100%;height:2em}
-#footer p {font-size:0.8em;line-height:2em;color:#fff}
+#footer {text-align: center;background:#202225;width:100%;height:100px; position: fixed; bottom: 0;}
+#footer p {font-size:1.4em;line-height:2em;color:#fff}
 #footer a {color:#63A9D5;text-decoration:none}
-#footer a:hover {text-decoration:underline}
+#footer a:hover {text-decoration:none}
 
 html {margin:0 !important;padding:0 !important}
