--- a/style.css
+++ b/style.css
@@ -7,24 +7,24 @@ Author: Jooa Akonpelto
 
 	Copyright &copy; 2023 Jooa Akonpelto. All rights reserved.
 
-
 */
 
 /* HEADER AND BODY STYLING */
-body {margin:0;padding:0}
-#header {background:#0066ff;width:100%;height:100px; border-radius: 0 0 20% 20%;box-shadow: 0px 0px 7px 1px black;margin-bottom: 22px;}
-#header .widthlimiter div {float:right;color:#74caff;font:italic bold 1em/80px sans-serif;}
+html{font-family: 'Quicksand', sans-serif;}
+body {margin:0;padding:0; background-color: #417754;background: linear-gradient(0deg, #417754 40%, #3b6248 100%); }
+#header {display:flex;background:#ffffff00;width:100%;height:100vh;  align-items: center; justify-content: center;}
+#header .widthlimiter div {color:#74caff;font-family: 'Quicksand', sans-serif;}
 #search {display:inline}
 #description {display:inline;margin-right:1em}
-.widthlimiter {min-width:600px;max-width:1000px;width:90%;margin:0 auto}
+.widthlimiter {min-width:0px;max-width:1000px;width:90%;margin:0 auto}
 #menu {width:100%;background:#fefefe;height:2em; box-shadow: 0px 2px 2px 2	px rgba(0,0,0,0.1);}
 
 
 /* NAVIGATION BAR   */
-#suckerfish {background:#63A9D5;font-size:18px;font-family:helvetica,sans-serif;font-weight:bold}
-#hj_NavId, #hj_NavId ul {font-weight:bold;float:left;list-style:none;line-height:2em;padding:0;border:0px solid #aaa;margin:0 0 0 0;width:100%}
-#hj_NavId a {display:block;color:#202225;text-decoration:none;padding:0px 10px}
-#hj_NavId li {float:left;padding:0}
+#suckerfish {background:#63A9D5;font-size:18px;font-weight:bold;}
+#hj_NavId, #hj_NavId ul {font-weight:bold;list-style:none;line-height:2em;padding:0;border:0px solid #aaa;margin:0 0 0 0;width:100%}
+#hj_NavId a {display:block;color:#202225;text-decoration:none;padding:0px 10px; font-family: 'Quicksand', sans-serif;}
+#hj_NavId li {padding:0}
 #hj_NavId li ul {position:absolute;left:-999em;height:auto;width:150px;font-weight:normal;margin:0;line-height:1}
 #hj_NavId li li {padding-right:1px;width:150px;border-left:1px solid #aaa;border-right:1px solid #aaa;border-bottom:1px solid #aaa}
 #hj_NavId li li a {padding:4px 10px;width:150px}
@@ -38,19 +38,23 @@ body {margin:0;padding:0}
 #hj_NavId li ul li li:hover a {color:#202225}
 #hj_NavId li ul li ul li:hover ul li a {color:#202225}
 #hj_NavId li ul li ul li:hover ul li:hover a {color:#202225}
-#hj_NavId li:hover ul ul, #hj_NavId li:hover ul ul ul, #hj_NavId li.sfhover ul ul, #hj_NavId li.sfhover ul ul ul {left:-999em}
-#hj_NavId li:hover ul, #hj_NavId li li:hover ul, #hj_NavId li li li:hover ul, #hj_NavId li.sfhover ul, #hj_NavId li li.sfhover ul, #hj_NavId li li li.sfhover ul {left:auto;background:#fff}
+/* #hj_NavId li:hover ul ul, #hj_NavId li:hover ul ul ul, #hj_NavId li.sfhover ul ul, #hj_NavId li.sfhover ul ul ul {left:-999em} */
+/* #hj_NavId li:hover ul, #hj_NavId li li:hover ul, #hj_NavId li li li:hover ul, #hj_NavId li.sfhover ul, #hj_NavId li li.sfhover ul, #hj_NavId li li li.sfhover ul {left:auto;background:#fff} */
 #hj_NavId li:hover, #hj_NavId li.sfhover {box-shadow: 0px 0px 7px 3px rgba(0,0,0,0.1);}
 #hj_NavId li:hover a, #hj_NavId li.sfhover a {color:#202225}
-#header h1{
+#header h2{
 	text-align: center;
+	padding-top: 7px;
 }
-#searchbox{
-	background-color: #7d7d7d; /* Green */
-	/*box shadow*/
-	box-shadow: 0px 0px 0px 6px rgba(0,0,0,0.1);
+#hj_NavId{
+	text-align: center;
+	display: inline;
+}
+
+/* #searchbox{
+	background-color: #0000;
+	box-shadow: 0px 0px 0px 1px rgba(0,0,0,1);
 	border: none;
-	border-radius: 20px;
 	color: white;
 	padding: 8px 32px;
 	text-align: left;
@@ -58,16 +62,18 @@ body {margin:0;padding:0}
 	display: inline-block;
 	font-size: 16px;
 	transition: all 0.2s;
+	pointer-events: stroke;
 }
 #searchbox:hover{
-	box-shadow: 0px 0px 0px 0px rgba(0,0,0,1);
+	box-shadow: 0px 1px 0px 0px rgba(0,0,0,1);
+}
+#searchbox:focus{
+	outline: 0;
 }
 #btnSearch{
-	background-color: #7d7d7d; /* Green */
-	/*box shadow*/
-	box-shadow: 0px 0px 0px 6px rgba(0,0,0,0.1);
+	background-color: #0000;
+	box-shadow: 0px 0px 0px 1px rgba(0,0,0,1);
 	border: none;
-	border-radius: 20px;
 	color: white;
 	padding: 8px 32px;
 	text-align: left;
@@ -77,31 +83,54 @@ body {margin:0;padding:0}
 	transition: all 0.2s;
 }
 #btnSearch:hover{
-	box-shadow: 0px 0px 0px 0px rgba(0,0,1);
+box-shadow: 0px 1px 0px 0px rgba(0,0,0,1);
 }
-
+#btnSearch:focus{
+	outline: 0;
+} */
 
 /* MAIN CONTENT STYLING */
-#content {}
-h1,h2,h3,h4,h5 {color:#000000}
-h1 a,h2 a,h3 a,h4 a,h5 a {color:#000000;text-decoration:none;}
+h1,h2,h3,h4,h5 {color:#000000;text-align: center; box-shadow: 0px 0px 3px 3px solid black;}
+h1 a,h2 a,h3 a,h4 a,h5 a {color:#000000;text-decoration:none; text-align: center;font-family: 'Quicksand', sans-serif;}
 h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover,h5 a:hover {text-decoration:underline}
-h1 {margin:0;padding:0;font:normal bold 3em/80px sans-serif}
-h2 {font:normal bold 2em sans-serif;margin:0.5em 0}
-h3 {font:normal bold 1.6em sans-serif;margin:0.4em 0}
-h4 {font:normal bold 1.3em sans-serif;margin:0.3em 0}
-h5 {font:normal bold 1.2em sans-serif;margin:0.2em 0}
-
+h1 {margin:0;padding:0;font:'Quicksand' 3em/80px sans-serif}
+h2 {font-family: 'Quicksand', sans-serif;margin:0em 0}
+h3 {font:'Quicksand' 1.6em sans-serif;margin:0.4em 0}
+h4 {font:'Quicksand' 1.3em sans-serif;margin:0.3em 0}
+h5 {font:'Quicksand' 1.2em sans-serif;margin:0.2em 0}
+a {color:#000000;text-decoration:none}
 p {font:normal 1.1em sans-serif;color:#202225}
 p a {color:#63A9D5;text-decoration:none}
 p a:hover {text-decoration:none}
 
-ul li, ol li {font-family:sans-serif;color:#202225}
+ul li, ol li {font-family:'Quicksand', sans-serif; color:#202225}
+/* wp block */
+.wp-block-file a {
+	background-color: #0707074e;
+	color: #66d781;
+	padding: 5px; 
+	border-radius: 5px 0px 5px 0px;
+}
+.wp-block-buttons a {
+	background-color: #0707074e;
+	color: #66d781;
+	padding: 5px; 
+	font-size: larger;
+	border-radius: 5px 0px 5px 0px;
+}
+.name a{
+	font-weight:bold;
+	font-size: 2.2em;
+	box-shadow: 0px 0px 3px 3px solid black;
+}
 
 /* FOOTER STYLING */
-#footer {text-align: center;background:#202225;width:100%;height:100px; position: fixed; bottom: 0;}
-#footer p {font-size:1.4em;line-height:2em;color:#fff}
-#footer a {color:#63A9D5;text-decoration:none}
+#footer {text-align: center;background:#0000;width:100%;height:20px; position: relative; bottom: 0; padding-top: 100px;}
+#footer p {font-size:1.4em;line-height:2em;color:#000000}
+#footer a {color:#44de87;text-decoration:none}
 #footer a:hover {text-decoration:none}
+#footer .widthlimiter {font-size: 10px;}
+
+
 
 html {margin:0 !important;padding:0 !important}
