--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: JooaTheme
-Theme URI: 
+Theme URI: jooa.pa
 Description: WordPress näyttötehtävä theme
 Version: 1.0
 Author: Jooa Akonpelto
